# AdventOfCode_Framework_CPP

./: .gitignore  CMakeLists.txt
data/: 2019day03.txt
include/detail/: HelperFunctions.hpp  Performance.hpp  Precompiled.hpp
include/interface/: IDay.hpp
include/lib/: Day.hpp  Day01.hpp  Day02.hpp  Day03.hpp  Days.hpp  Factory.hpp
include/lib/days/: Day01.hpp  Day02.hpp  Day03.hpp  Day04.hpp  Day05.hpp  Day06.hpp  Day07.hpp  Day08.hpp  Day09.hpp  Day10.hpp  Day11.hpp  Day12.hpp  Day13.hpp  Day14.hpp  Day15.hpp  Day16.hpp  Day17.hpp  Day18.hpp  Day19.hpp  Day20.hpp  Day21.hpp  Day22.hpp  Day23.hpp  Day24.hpp  Day25.hpp
include/lib/interface/: IDay.hpp
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  Day.cpp  Day01.cpp  Day02.cpp  Day03.cpp  Days.cpp  Factory.cpp
src/lib/days/: Day01.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  Day07.cpp  Day08.cpp  Day09.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day13.cpp  Day14.cpp  Day15.cpp  Day16.cpp  Day17.cpp  Day18.cpp  Day19.cpp  Day20.cpp  Day21.cpp  Day22.cpp  Day23.cpp  Day24.cpp  Day25.cpp
tests/: All_Tests.cpp  CMakeLists.txt  lib_Tests.cpp
tests/2019/: Day01_Tests.cpp  Day02_Tests.cpp  Day03_Tests.cpp  Day04_Tests.cpp  Day05_Tests.cpp  Day06_Tests.cpp  Day07_Tests.cpp  Day08_Tests.cpp  Day09_Tests.cpp  Day10_Tests.cpp  Day11_Tests.cpp  Day12_Tests.cpp  Day13_Tests.cpp  Day14_Tests.cpp  Day15_Tests.cpp  Day16_Tests.cpp  Day17_Tests.cpp  Day18_Tests.cpp  Day19_Tests.cpp  Day20_Tests.cpp  Day21_Tests.cpp  Day22_Tests.cpp  Day23_Tests.cpp  Day24_Tests.cpp  Day25_Tests.cpp
tests/2019/data/day02/: day02_4.txt
