cmake_minimum_required (VERSION 3.5)
project(Main)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(SOURCE_FILES main.cpp)
set(INCLUDE_DIRS ../include/detail ../include/lib/interface ../include/lib ../include/lib/days)

add_executable(main ${SOURCE_FILES})
target_link_libraries(main PRIVATE libAoC)
target_include_directories(main PRIVATE ${INCLUDE_DIRS})

set(DATA_FILE_PATH data/2019)
configure_file(../${DATA_FILE_PATH}/day01.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day01.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day02.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day02.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day03.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day03.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day04.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day04.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day05.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day05.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day06.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day06.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day07.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day07.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day08.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day08.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day09.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day09.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day10.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day10.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day11.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day11.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day12.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day12.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day13.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day13.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day14.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day14.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day15.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day15.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day16.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day16.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day17.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day17.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day18.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day18.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day19.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day19.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day20.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day20.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day21.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day21.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day22.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day22.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day23.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day23.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day24.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day24.txt COPYONLY)
configure_file(../${DATA_FILE_PATH}/day25.txt ${CMAKE_CURRENT_BINARY_DIR}/${DATA_FILE_PATH}/day25.txt COPYONLY)
